fix: z-index text

--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,8 @@ main {
 .font-esthetic {
     font-family: 'Montserrat', sans-serif !important;
     color: #000 ;
+    z-index: 99;
+    position: relative;
 }
 
 .font-arabic {
